I didn't change any style yet

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,5 @@
 /**/
-body{
-    backgound-color: #4545454
-    text-color: https://color.adobe.com/ART-USAS-color-theme-8250596/
+body {
+    background-color: #4545454;
+  
 }
