changes css, and added more javascript files

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,12 +1,14 @@
 /**/
 body {
-    background-color: #454545;
+    background-color: black;
     color: white;
+ 
 }
 #startbutton {
     color: #1affff;
     text-decoration: none;
     text-align: center;
+    font-size: 20px;
  
 } 
 #startbutton p{
@@ -15,19 +17,50 @@ body {
 }
 h1 {
     text-align: center; 
-    font-size: 60px;
+    font-size: 43px;
+    font-family: 'Rock Salt', cursive;
 }
 p {
     text-align: center;
-    font-size: 25px;
+    font-size: 15px;
+    font-family: 'Rock Salt', cursive;
 }
 img {
     display: block;
     margin: auto;
-    width: 70%;
-    height: 50%;
+    width: 350px;
+    height: 280px;
 }
 .text {
     font-size: 10px;
     margin-bottom: 100px;
+}
+#scoreCard {
+    font-size:30px;
+}
+#wrong1 {
+    font-size: 20px;
+    width: 85%;
+    margin-left: 7%;
+}
+#wrong2 {
+    font-size: 20px;
+    width: 85%;
+    margin-left: 7%;
+}
+#wrong3 {
+    font-size: 20px;
+    width: 85%;
+    margin-left: 7%;
+}
+#correct {
+    font-size: 20px;
+    width: 85%;
+    margin-left: 7%;
+}
+h2 {
+     font-family: 'Rock Salt', cursive;
+     font-size: 20px;
+     margin-left: 7%;
+     margin-right: 7%;
 }
