--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,7 +1,7 @@
 /**/
 body {
     background-color: black;
-    color: white;
+    color: white; 
  
 }
 #startbutton {
@@ -19,6 +19,8 @@ h1 {
     text-align: center; 
     font-size: 43px;
     font-family: 'Rock Salt', cursive;
+    color: white;
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 100px darkblue;
 }
 p {
     text-align: center;
@@ -36,31 +38,51 @@ img {
     margin-bottom: 100px;
 }
 #scoreCard {
-    font-size:30px;
+    font-size: 25px;
 }
 #wrong1 {
-    font-size: 20px;
-    width: 85%;
-    margin-left: 7%;
+    font-size: 15px;
+    width: 90%;
+    height: 7%;
+    margin-left: 5%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+   
 }
 #wrong2 {
-    font-size: 20px;
-    width: 85%;
-    margin-left: 7%;
+    font-size: 15px;
+    width: 90%;
+    height: 7%;
+    margin-left: 5%; 
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 #wrong3 {
-    font-size: 20px;
-    width: 85%;
-    margin-left: 7%;
+    font-size: 15px;
+    width: 90%;
+    height: 7%;
+    margin-left: 5%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+   
 }
 #correct {
-    font-size: 20px;
-    width: 85%;
-    margin-left: 7%;
+    font-size: 15px;
+    width: 90%;
+    height: 7%;
+    margin-left: 5%;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
-h2 {
+h2  {
      font-family: 'Rock Salt', cursive;
-     font-size: 20px;
-     margin-left: 7%;
-     margin-right: 7%;
+     font-size: 15px;
+     text-align: center;
+     margin-right: 5%;
+     margin-left: 5%;
+     margin-top: 12%;
+}
+#light {
+    height: 350px;
+    
 }
